Added private functions to \models classes

--- a/01_LinearRegression/House price prediction.ipynb
+++ b/01_LinearRegression/House price prediction.ipynb
@@ -55,77 +55,427 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>119.37</td>\n",
        "      <td>121.87</td>\n",
        "      <td>20.5</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>148.93</td>\n",
        "      <td>150.25</td>\n",
        "      <td>22.0</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>130.39</td>\n",
        "      <td>122.78</td>\n",
        "      <td>15.9</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>135.70</td>\n",
        "      <td>144.35</td>\n",
        "      <td>18.6</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>126.30</td>\n",
        "      <td>116.20</td>\n",
        "      <td>12.1</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>137.08</td>\n",
+       "      <td>139.49</td>\n",
+       "      <td>17.1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>123.49</td>\n",
+       "      <td>115.73</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>150.83</td>\n",
+       "      <td>140.59</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>123.48</td>\n",
+       "      <td>120.29</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>132.05</td>\n",
+       "      <td>147.25</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>148.21</td>\n",
+       "      <td>152.26</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>139.53</td>\n",
+       "      <td>144.80</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>114.34</td>\n",
+       "      <td>107.06</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>140.04</td>\n",
+       "      <td>147.47</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>136.01</td>\n",
+       "      <td>135.12</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>140.93</td>\n",
+       "      <td>140.24</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>132.42</td>\n",
+       "      <td>129.89</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>118.30</td>\n",
+       "      <td>121.14</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>122.14</td>\n",
+       "      <td>111.23</td>\n",
+       "      <td>14.2</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>149.82</td>\n",
+       "      <td>145.14</td>\n",
+       "      <td>20.7</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>128.91</td>\n",
+       "      <td>139.01</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>134.61</td>\n",
+       "      <td>129.34</td>\n",
+       "      <td>19.1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>121.99</td>\n",
+       "      <td>113.61</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>150.50</td>\n",
+       "      <td>141.05</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>142.87</td>\n",
+       "      <td>152.90</td>\n",
+       "      <td>19.9</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>155.55</td>\n",
+       "      <td>157.79</td>\n",
+       "      <td>22.7</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>128.50</td>\n",
+       "      <td>135.57</td>\n",
+       "      <td>19.7</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>143.36</td>\n",
+       "      <td>151.99</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>119.65</td>\n",
+       "      <td>120.53</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>122.57</td>\n",
+       "      <td>118.64</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>145</td>\n",
+       "      <th>120</th>\n",
+       "      <td>120.37</td>\n",
+       "      <td>131.45</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>118.83</td>\n",
+       "      <td>114.57</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>124.49</td>\n",
+       "      <td>129.56</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>140.57</td>\n",
+       "      <td>149.55</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>133.62</td>\n",
+       "      <td>140.82</td>\n",
+       "      <td>19.7</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>105.05</td>\n",
+       "      <td>111.55</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>147.09</td>\n",
+       "      <td>142.76</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>115.43</td>\n",
+       "      <td>124.25</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>125.37</td>\n",
+       "      <td>132.32</td>\n",
+       "      <td>20.7</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>115.97</td>\n",
+       "      <td>121.45</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>125.21</td>\n",
+       "      <td>132.45</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>130.37</td>\n",
+       "      <td>135.83</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>119.75</td>\n",
+       "      <td>125.76</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>120.93</td>\n",
+       "      <td>125.84</td>\n",
+       "      <td>17.1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>126.80</td>\n",
+       "      <td>135.32</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>118.82</td>\n",
+       "      <td>120.14</td>\n",
+       "      <td>16.4</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>144.08</td>\n",
+       "      <td>147.53</td>\n",
+       "      <td>20.1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>142.49</td>\n",
+       "      <td>144.94</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>140.55</td>\n",
+       "      <td>136.01</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>130.36</td>\n",
+       "      <td>119.33</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>124.27</td>\n",
+       "      <td>131.15</td>\n",
+       "      <td>16.6</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>167.73</td>\n",
+       "      <td>172.36</td>\n",
+       "      <td>25.1</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>129.19</td>\n",
+       "      <td>137.17</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>125.18</td>\n",
+       "      <td>124.71</td>\n",
+       "      <td>16.6</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>157.51</td>\n",
+       "      <td>148.65</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
        "      <td>126.67</td>\n",
        "      <td>128.52</td>\n",
        "      <td>14.3</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>146</td>\n",
+       "      <th>146</th>\n",
        "      <td>137.57</td>\n",
        "      <td>132.02</td>\n",
        "      <td>17.1</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>147</td>\n",
+       "      <th>147</th>\n",
        "      <td>133.46</td>\n",
        "      <td>128.03</td>\n",
        "      <td>15.8</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>148</td>\n",
+       "      <th>148</th>\n",
        "      <td>163.57</td>\n",
        "      <td>168.06</td>\n",
        "      <td>23.5</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>149</td>\n",
+       "      <th>149</th>\n",
        "      <td>118.46</td>\n",
        "      <td>114.92</td>\n",
        "      <td>14.2</td>\n",
@@ -143,7 +493,57 @@
        "2    130.39  122.78            15.9              3.0\n",
        "3    135.70  144.35            18.6              3.0\n",
        "4    126.30  116.20            12.1              2.0\n",
+       "5    137.08  139.49            17.1              3.0\n",
+       "6    123.49  115.73            16.7              3.0\n",
+       "7    150.83  140.59            17.8              3.0\n",
+       "8    123.48  120.29            15.2              4.0\n",
+       "9    132.05  147.25            18.3              2.0\n",
+       "10   148.21  152.26            17.0              3.0\n",
+       "11   139.53  144.80            17.2              3.0\n",
+       "12   114.34  107.06            16.7              3.0\n",
+       "13   140.04  147.47            16.5              3.0\n",
+       "14   136.01  135.12            16.1              2.0\n",
+       "15   140.93  140.24            15.7              3.0\n",
+       "16   132.42  129.89            16.5              4.0\n",
+       "17   118.30  121.14            16.4              3.0\n",
+       "18   122.14  111.23            14.2              2.0\n",
+       "19   149.82  145.14            20.7              4.0\n",
+       "20   128.91  139.01            16.1              2.0\n",
+       "21   134.61  129.34            19.1              4.0\n",
+       "22   121.99  113.61            14.1              2.0\n",
+       "23   150.50  141.05            18.6              4.0\n",
+       "24   142.87  152.90            19.9              4.0\n",
+       "25   155.55  157.79            22.7              5.0\n",
+       "26   128.50  135.57            19.7              4.0\n",
+       "27   143.36  151.99            18.2              3.0\n",
+       "28   119.65  120.53            16.5              3.0\n",
+       "29   122.57  118.64            14.7              2.0\n",
        "..      ...     ...             ...              ...\n",
+       "120  120.37  131.45            18.3              4.0\n",
+       "121  118.83  114.57            14.7              2.0\n",
+       "122  124.49  129.56            16.9              3.0\n",
+       "123  140.57  149.55            19.3              4.0\n",
+       "124  133.62  140.82            19.7              2.0\n",
+       "125  105.05  111.55            15.3              2.0\n",
+       "126  147.09  142.76            20.3              5.0\n",
+       "127  115.43  124.25            18.3              3.0\n",
+       "128  125.37  132.32            20.7              3.0\n",
+       "129  115.97  121.45            16.3              2.0\n",
+       "130  125.21  132.45            15.8              3.0\n",
+       "131  130.37  135.83            17.6              3.0\n",
+       "132  119.75  125.76            18.1              4.0\n",
+       "133  120.93  125.84            17.1              3.0\n",
+       "134  126.80  135.32            18.9              3.0\n",
+       "135  118.82  120.14            16.4              2.0\n",
+       "136  144.08  147.53            20.1              4.0\n",
+       "137  142.49  144.94            17.3              3.0\n",
+       "138  140.55  136.01            17.7              4.0\n",
+       "139  130.36  119.33            17.5              4.0\n",
+       "140  124.27  131.15            16.6              3.0\n",
+       "141  167.73  172.36            25.1              5.0\n",
+       "142  129.19  137.17            17.0              2.0\n",
+       "143  125.18  124.71            16.6              3.0\n",
+       "144  157.51  148.65            21.1              4.0\n",
        "145  126.67  128.52            14.3              2.0\n",
        "146  137.57  132.02            17.1              4.0\n",
        "147  133.46  128.03            15.8              2.0\n",
@@ -173,10 +573,10 @@
     "        self.max_iter = max_iter\n",
     "        self.alpha = alpha\n",
     "    \n",
-    "    def calculate_cost(self):\n",
+    "    def __calculate_cost(self):\n",
     "        self.J = (1/(2 * self.m)) * np.sum((self.h - self.y)**2)\n",
     "        \n",
-    "    def calculate_theta(self):\n",
+    "    def __calculate_theta(self):\n",
     "        for j, _ in enumerate(self.theta):\n",
     "            self.theta[j] = self.theta[j] \\\n",
     "            - (self.alpha / self.m) * np.sum(np.dot((self.h - self.y), self.X[:,j].T))\n",
@@ -197,8 +597,8 @@
     "            prev_J = self.J\n",
     "            prev_theta = self.theta.copy()\n",
     "            self.h = np.matmul(self.X, self.theta)\n",
-    "            self.calculate_cost()\n",
-    "            self.calculate_theta()\n",
+    "            self.__calculate_cost()\n",
+    "            self.__calculate_theta()\n",
     "            if prev_J < self.J:\n",
     "                self.J = prev_J\n",
     "                self.theta = prev_theta\n",
@@ -214,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +633,7 @@
        "array([10.35591184,  7.7110678 , -4.70830526])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -255,7 +655,7 @@
        "9.056303316855946"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,9 +674,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:deeplearning]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-deeplearning-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -288,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
