--- a/02_LogisticRegression/House grade prediction.ipynb
+++ b/02_LogisticRegression/House grade prediction.ipynb
@@ -1018,12 +1018,12 @@
     "        self.alpha = alpha\n",
     "        self.to_scale = to_scale\n",
     "    \n",
-    "    def calculate_cost(self):\n",
+    "    def __calculate_cost(self):\n",
     "        assert(np.isin(self.y, [0,1]).all())\n",
     "        \n",
     "        self.J = (-1/self.m)*(np.sum((self.y*np.log(self.h)) + ((1-self.y)*(np.log(1-self.h)))))\n",
     "        \n",
-    "    def calculate_theta(self):\n",
+    "    def __calculate_theta(self):\n",
     "#         for j, _ in enumerate(self.theta):\n",
     "#             self.theta[j] = self.theta[j] \\\n",
     "#             - (self.alpha / self.m) * np.sum(np.dot((self.h - self.y), self.X[:,j].T))\n",
@@ -1051,8 +1051,8 @@
     "        self.h = np.divide(1.,(1. + np.exp(-t)))\n",
     "        for _ in range(self.max_iter):\n",
     "#             print(self.h)\n",
-    "            self.calculate_cost()\n",
-    "            self.calculate_theta()\n",
+    "            self.__calculate_cost()\n",
+    "            self.__calculate_theta()\n",
     "            t = np.matmul(self.X, self.theta)\n",
     "            self.h = 1 / (1 + np.exp(-t))\n",
     "                       \n",
